--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "classnames": "^2.5.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.0",
+    "react-modal": "^3.16.1",
     "swiper": "^11.1.1",
     "swr": "^2.2.5"
   },
@@ -20,6 +23,7 @@
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "sass": "^1.75.0",
