--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "classnames": "^2.5.1",
     "next": "14.2.3",
     "react": "^18",
+    "react-18-image-lightbox": "^5.1.4",
     "react-dom": "^18",
+    "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.2.0",
     "react-modal": "^3.16.1",
     "swiper": "^11.1.1",
