--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,6 +13,7 @@
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "next": "14.2.3",
+    "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-18-image-lightbox": "^5.1.4",
     "react-dom": "^18",
@@ -22,13 +24,16 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@gsap/react": "^2.1.1",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "gsap": "^3.12.5",
     "sass": "^1.76.0",
+    "styled-components": "^6.1.13",
     "typescript": "5.4.5",
     "typescript-plugin-css-modules": "^5.1.0"
   }
