--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.2.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "7.1.1",
     "swiper": "^11.1.1",
     "swr": "^2.2.5"
+  },
+  {
+    "engines": {
+      "node": ">=20.0.0",
+    }
   },
   "devDependencies": {
     "@gsap/react": "^2.1.1",
