--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "type": "module",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -24,9 +27,7 @@
     "swiper": "^11.1.1",
     "swr": "^2.2.5"
   },
-  "engines": {
-    "node": ">=20.0.0",
-  },
+  
   "devDependencies": {
     "@gsap/react": "^2.1.1",
     "@types/node": "20.12.7",
