--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.2.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "7.1.1",
+    "react-router-dom": "^7.0.0",
     "swiper": "^11.1.1",
     "swr": "^2.2.5"
   },
-  
   "devDependencies": {
     "@gsap/react": "^2.1.1",
     "@types/node": "20.12.7",
