--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "next": "13.2.3",
     "next-transpile-modules": "^10.0.1",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-18-image-lightbox": "^5.1.4",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.2.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.0.0",
+    "react-router-dom": "^7.1.1",
     "swiper": "^11.1.1",
     "swr": "^2.2.5"
   },
