--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,18 +7,17 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
-    "allowSyntheticDefaultImports" : true,
+    "jsx": "preserve",
+    "allowSyntheticDefaultImports": true,
     "incremental": true,
     "paths": {
-      "react": ["./node_modules/@types/react"],
       "@/*": [
         "./src/*"
       ]
