--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -78,9 +78,9 @@ jobs:
         run: |
         ${{ steps.detect-package-manager.outputs.runner }} next build
         ${{ steps.detect-package-manager.outputs.runner }} next export
-      - name: Debug Before Upload
+      - name: Debug Build and Export
         run: |
-          echo "Current directory contents:"
+          echo "Contents of current directory:"
           ls -al
           echo "Contents of '.next' directory:"
           ls -al .next || echo "'.next' directory does not exist"
@@ -90,12 +90,6 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
-      - name: Debug Build Directory
-        run: |
-          echo "Current directory contents:"
-          ls -al
-          echo "Contents of 'out' directory:"
-          ls -al out || echo "'out' directory does not exist"
 
   # Deployment job
   deploy:
