--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20.18.1"
+          node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -75,19 +75,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
-        run: |
-        ${{ steps.detect-package-manager.outputs.runner }} next build
-      - name: Export with Next.js
-        run: |
-          ${{ steps.detect-package-manager.outputs.runner }} next export
-      - name: Debug Build and Export
-        run: |
-          echo "Contents of current directory:"
-          ls -al
-          echo "Contents of '.next' directory:"
-          ls -al .next || echo "'.next' directory does not exist"
-          echo "Contents of 'out' directory:"
-          ls -al out || echo "'out' directory does not exist"
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
